name:                kms-s3
version:             0.1.0.0
synopsis:            Simple CLI wrapper around KMS/S3.
description:         Please see README.md
homepage:            https://github.com/githubuser/kms-s3#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            Cli
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable kms-s3
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       Args

  build-depends:       base
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , amazonka-s3-encryption
                     , amazonka-sts
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , gitrev
                     , lens
                     , network-uri
                     , optparse-applicative
                     , text
                     , transformers

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded
